[tool.poetry]
name = "subtitle-utils"
version = "0.1.3"
description = "Subtilte Conversion utils - ass2srt vtt2bcc srt2bcc ass2bcc and more"
authors = ["sudoskys <coldlando@hotmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "subtitle_utils"}]
repository = "https://github.com/sudoskys/subtitle_utils"

[tool.poetry.dependencies]
python = "^3.7"
pathlib = "^1.0.1"
loguru = "^0.6.0"
pysrt = "^1.1.2"
pyvtt = "^0.0.4"
chardet = "^5.1.0"
pyasstosrt = "^1.3.1"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
