[tool.poetry]
name = "subtitle-utils"
version = "0.1.4"
description = "Subtilte Conversion utils - ass2srt vtt2bcc srt2bcc ass2bcc and more"
authors = ["sudoskys <coldlando@hotmail.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "subtitle_utils"}]
repository = "https://github.com/sudoskys/subtitle_utils"

[tool.poetry.dependencies]
python = "^3.7"
pathlib = "^1.0.1"
loguru = "^0.6.0"
pysrt = "^1.1.2"
pyvtt = "^0.0.4"
chardet = "^5.1.0"
pyasstosrt = "^1.3.1"
pydantic = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
