[project]
name = "subtitle-utils"
version = "1.0.0"
description = "Subtilte Conversion utils - ass2srt vtt2bcc srt2bcc ass2bcc and more"
authors = [
    { name = "sudoskys", email = "coldlando@hotmail.com" },
    { name = "KimmyXYC", email = "kimmyxyc@gmail.com" }
]
dependencies = [
    "pathlib<2.0.0,>=1.0.1",
    "loguru<1.0.0,>=0.6.0",
    "pysrt<2.0.0,>=1.1.2",
    "pyvtt<1.0.0,>=0.0.4",
    "chardet<6.0.0,>=5.1.0",
    "pyasstosrt<2.0.0,>=1.3.1",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.4",
]

[project.urls]
repository = "https://github.com/sudoskys/subtitle_utils"
